WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285919
LLInt/IPInt should check if BBQ is enabled before tiering SIMD functions to BBQ
https://bugs.webkit.org/show_bug.cgi?id=285919
Summary
LLInt/IPInt should check if BBQ is enabled before tiering SIMD functions to BBQ
daniel_liu4
Reported
2025-01-14 09:28:42 PST
Currently, LLInt and IPInt tier up SIMD functions immediately to BBQ. However, in the Plan for these tiers, the only check is if `useWasmJIT()` is on. Thus, if BBQ is disabled, but `useWasmJIT` is still enabled, we will hit an assertion failure checking that BBQ is enabled.
rdar://142808201
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-01-14 09:35:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39001
EWS
Comment 2
2025-01-14 16:09:44 PST
Committed
288900@main
(0f0fc14f86d4): <
https://commits.webkit.org/288900@main
> Reviewed commits have been landed. Closing PR #39001 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug