LLInt/IPInt should check if BBQ is enabled before tiering SIMD functions to BBQ https://bugs.webkit.org/show_bug.cgi?id=285919 rdar://142808201

Reviewed by Yijia Huang and Yusuke Suzuki.

Currently, LLInt and IPInt tier up SIMD functions immediately to BBQ. However, in
the Plan for these tiers, the only check is if `useWasmJIT()` is on. Thus, if BBQ
is disabled, but `useWasmJIT` is still enabled, we will hit an assertion failure
checking that BBQ is enabled.

* Source/JavaScriptCore/wasm/WasmIPIntPlan.cpp:
(JSC::Wasm::IPIntPlan::compileFunction):
* Source/JavaScriptCore/wasm/WasmLLIntPlan.cpp:
(JSC::Wasm::LLIntPlan::compileFunction):

Canonical link: https://commits.webkit.org/288900@main